fix orders & planning lists on mobile

--- a/css/layout.css
+++ b/css/layout.css
@@ -604,3 +604,7 @@ only screen and (max-width: 760px),
 	right: 0;
 	bottom: 0;
 }
+
+.allocated-list{
+	min-height: 10px;
+}
